# sust-cp-hub-backend

./: Cargo.toml  README.md
docs/: api.md
migrations/: 001_initial_schema.sql  004_otp_codes.sql
src/: app_state.rs  errors.rs  main.rs  validation.rs
src/config/: database.rs
src/handlers/: admin_handler.rs  announcement_handler.rs  auth_handler.rs  contest_handler.rs  event_handler.rs  health_handler.rs  mod.rs  user_handler.rs
src/middleware/: auth_middleware.rs
src/models/: announcement.rs  contest.rs  event.rs  mod.rs  user.rs
src/routes/: announcement_routes.rs  auth_routes.rs  contest_routes.rs  event_routes.rs  mod.rs  user_routes.rs
src/services/: email.rs
src/utils/: jwt.rs  otp.rs
