[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "tls-rustls"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Password hashing (Argon2)
argon2 = "0.5"

# JWT authentication
jsonwebtoken = "9"

# Environment variables
dotenvy = "0.15"

# HTTP utilities (CORS, logging)
tower-http = { version = "0.6", features = ["cors", "trace"] }
http = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Email (Resend API)
resend-rs = "0.25"

# Random number generation (OTP codes)
rand = "0.8"
